--- a/app/src/main/res/layout/item_category.xml
+++ b/app/src/main/res/layout/item_category.xml
@@ -53,7 +53,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginStart="16dp"
-                    android:text="@string/percent_placeholder"
+                    android:text="@{categoryModel.progressText, default=`0%`}"
                     android:textColor="?attr/baseTextColor"
                     android:textSize="12sp"
                     app:layout_constraintStart_toStartOf="parent"
@@ -67,7 +67,8 @@
                     android:layout_height="wrap_content"
                     android:layout_marginStart="16dp"
                     android:layout_marginEnd="16dp"
-                    android:progress="30"
+                    android:progress="@{categoryModel.progressPercentage}"
+                    android:max="100"
                     android:progressTint="@android:color/white"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
