--- a/app/src/main/res/layout/fragment_settings_account_edit_profile.xml
+++ b/app/src/main/res/layout/fragment_settings_account_edit_profile.xml
@@ -38,6 +38,7 @@
             android:src="@drawable/ic_back_arrow"
             android:background="@android:color/transparent"
             android:contentDescription="@string/back_icon_arrow"
+            android:layout_margin="10dp"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintStart_toStartOf="parent"/>
 
@@ -46,7 +47,8 @@
             android:id="@+id/user_account_profile_pic_id"
             android:layout_width="80dp"
             android:layout_height="80dp"
-            android:src="@drawable/personal_pic_placeholder"
+            android:layout_marginTop="10dp"
+            android:src="?attr/defaultUserPic"
             app:layout_constraintTop_toBottomOf="@+id/guideline1"
             app:layout_constraintStart_toStartOf="parent"/>
 
@@ -55,8 +57,8 @@
             android:id="@+id/username_display_text_id"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/user_email_input"
-            android:textSize="20sp"
+            android:text="Hi      "
+            android:textSize="25sp"
             android:textColor="@color/white"
             android:layout_marginTop="10dp"
             android:layout_marginStart="20dp"
@@ -68,43 +70,43 @@
             android:id="@+id/email_display_text_id"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/user_example_email"
+            app:formattedEmail="@{settingsVM.loginEmail}"
             android:textColor="@color/white"
-            android:layout_marginTop="10dp"
+            android:layout_marginTop="18dp"
             android:layout_marginStart="20dp"
             app:layout_constraintTop_toBottomOf="@+id/username_display_text_id"
             app:layout_constraintStart_toEndOf="@+id/user_account_profile_pic_id"/>
 
         <!-- About me description -->
-        <LinearLayout
-            android:id="@+id/about_me_layout_id"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:gravity="center_vertical"
-            android:orientation="vertical"
-            android:padding="20dp"
-            android:background="@drawable/background_dim_curved_purple2"
-            app:layout_constraintTop_toBottomOf="@+id/guideline2">
+<!--        <LinearLayout-->
+<!--            android:id="@+id/about_me_layout_id"-->
+<!--            android:layout_width="match_parent"-->
+<!--            android:layout_height="wrap_content"-->
+<!--            android:gravity="center_vertical"-->
+<!--            android:orientation="vertical"-->
+<!--            android:padding="20dp"-->
+<!--            android:background="@drawable/background_dim_curved_purple2"-->
+<!--            app:layout_constraintTop_toBottomOf="@+id/guideline2">-->
 
-            <com.google.android.material.textview.MaterialTextView
-                android:id="@+id/about_me_label_id"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@string/about_me_label"
-                android:textSize="18sp"
-                android:textStyle="bold"
-                android:textColor="@color/white"/>
+<!--            <com.google.android.material.textview.MaterialTextView-->
+<!--                android:id="@+id/about_me_label_id"-->
+<!--                android:layout_width="wrap_content"-->
+<!--                android:layout_height="wrap_content"-->
+<!--                android:text="@string/about_me_label"-->
+<!--                android:textSize="18sp"-->
+<!--                android:textStyle="bold"-->
+<!--                android:textColor="@color/white"/>-->
 
-            <com.google.android.material.textview.MaterialTextView
-                android:id="@+id/about_me_short_description_label_id"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@string/short_desc_label"
-                android:textSize="14sp"
-                android:textColor="@color/white"
-                android:layout_marginTop="10dp"/>
+<!--            <com.google.android.material.textview.MaterialTextView-->
+<!--                android:id="@+id/about_me_short_description_label_id"-->
+<!--                android:layout_width="wrap_content"-->
+<!--                android:layout_height="wrap_content"-->
+<!--                android:text="@string/short_desc_label"-->
+<!--                android:textSize="14sp"-->
+<!--                android:textColor="@color/white"-->
+<!--                android:layout_marginTop="10dp"/>-->
 
-        </LinearLayout>
+<!--        </LinearLayout>-->
 
         <!-- Email display -->
         <LinearLayout
@@ -116,7 +118,7 @@
             android:padding="20dp"
             android:layout_marginTop="16dp"
             android:background="@drawable/background_dim_curved_purple2"
-            app:layout_constraintTop_toBottomOf="@+id/about_me_layout_id">
+            app:layout_constraintTop_toBottomOf="@+id/user_account_profile_pic_id">
 
             <com.google.android.material.textview.MaterialTextView
                 android:id="@+id/user_email_label_id"
@@ -131,7 +133,7 @@
                 android:id="@+id/user_email_id"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="@string/user_example_email"
+                android:text="@{settingsVM.loginEmail}"
                 android:textSize="14sp"
                 android:textColor="@color/white"
                 android:layout_marginTop="10dp"/>
