--- a/app/src/main/res/layout/fragment_settings_timer.xml
+++ b/app/src/main/res/layout/fragment_settings_timer.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout xmlns:app="http://schemas.android.com/apk/res-auto">
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <data>
         <variable
@@ -7,7 +8,7 @@
             type="com.example.pomodoro_timer.viewmodels.SettingsViewModel" />
     </data>
 
-    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+    <ScrollView
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
@@ -40,15 +41,15 @@
                     android:id="@+id/pomodoro_time_display_id"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:text="@string/pomodoro_timer_default_text"
-                    android:textSize="20sp"
-                    android:textStyle="bold"
-                    android:textColor="?attr/timerSelectionTextColor"
-                    android:padding="10dp"
-                    android:textAlignment="center"
+                    android:background="@drawable/background_curved_white"
                     android:clickable="true"
                     android:focusable="true"
-                    android:background="@drawable/background_curved_white" />
+                    android:padding="10dp"
+                    android:text="@string/pomodoro_timer_default_text"
+                    android:textAlignment="center"
+                    android:textColor="?attr/timerSelectionTextColor"
+                    android:textSize="20sp"
+                    android:textStyle="bold" />
             </LinearLayout>
 
             <!-- Short break timer picker -->
@@ -165,9 +166,7 @@
                         android:hint="@string/pomodoro_number_placeholder"
                         android:text="@={settingsVM.defaultLBIntervalString}"
                         android:textColor="?attr/baseTextColor"
-                        android:textStyle="bold"
-                        app:layout_constraintTop_toBottomOf="@id/priority_group"
-                        app:layout_constraintEnd_toEndOf="parent"/>
+                        android:textStyle="bold"/>
                 </LinearLayout>
 
                 <!-- Auto start pomodoro control -->
