--- a/app/src/main/res/layout/fragment_task_add_task.xml
+++ b/app/src/main/res/layout/fragment_task_add_task.xml
@@ -47,65 +47,64 @@
                         android:layout_height="wrap_content"
                         android:hint="@string/short_desc_label"
                         android:inputType="text"
-                        android:text="@={taskVM.taskTitle}"
-                        android:textSize="16sp"
                         android:maxLength="30"
+                        android:text="@={taskVM.taskTitle}"
                         android:textColor="?attr/baseTextColor"
-                        android:textColorHint="?attr/roundedBtnBg"/>
+                        android:textSize="16sp" />
 
                 </com.google.android.material.textfield.TextInputLayout>
 
             </LinearLayout>
 
             <!-- Priority level label -->
-            <com.google.android.material.textview.MaterialTextView
-                android:id="@+id/priority_level_label"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@string/priority_level"
-                android:textColor="?attr/baseTextColor"
-                android:textSize="25sp"
-                android:layout_marginTop="10dp"
-                android:layout_marginStart="30dp"
-                app:layout_constraintTop_toBottomOf="@+id/task_layout"
-                app:layout_constraintStart_toStartOf="parent"/>
+<!--            <com.google.android.material.textview.MaterialTextView-->
+<!--                android:id="@+id/priority_level_label"-->
+<!--                android:layout_width="wrap_content"-->
+<!--                android:layout_height="wrap_content"-->
+<!--                android:text="@string/priority_level"-->
+<!--                android:textColor="?attr/baseTextColor"-->
+<!--                android:textSize="25sp"-->
+<!--                android:layout_marginTop="10dp"-->
+<!--                android:layout_marginStart="30dp"-->
+<!--                app:layout_constraintTop_toBottomOf="@+id/task_layout"-->
+<!--                app:layout_constraintStart_toStartOf="parent"/>-->
 
-            <!-- Priority levels radio group -->
-            <RadioGroup
-                android:id="@+id/priority_group"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:orientation="horizontal"
-                android:checkedButton="@={taskVM.selectedPriority}"
-                app:layout_constraintTop_toBottomOf="@+id/priority_level_label"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintEnd_toEndOf="parent">
+<!--            &lt;!&ndash; Priority levels radio group &ndash;&gt;-->
+<!--            <RadioGroup-->
+<!--                android:id="@+id/priority_group"-->
+<!--                android:layout_width="wrap_content"-->
+<!--                android:layout_height="wrap_content"-->
+<!--                android:orientation="horizontal"-->
+<!--                android:checkedButton="@={taskVM.selectedPriority}"-->
+<!--                app:layout_constraintTop_toBottomOf="@+id/priority_level_label"-->
+<!--                app:layout_constraintStart_toStartOf="parent"-->
+<!--                app:layout_constraintEnd_toEndOf="parent">-->
 
-                <RadioButton
-                    android:id="@+id/priority_high"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="@string/priority_high"
-                    android:textColor="?attr/baseTextColor"
-                    android:onClick="@{() -> taskVM.setPriority(1, priorityHigh.getId())}"/>
+<!--                <RadioButton-->
+<!--                    android:id="@+id/priority_high"-->
+<!--                    android:layout_width="wrap_content"-->
+<!--                    android:layout_height="wrap_content"-->
+<!--                    android:text="@string/priority_high"-->
+<!--                    android:textColor="?attr/baseTextColor"-->
+<!--                    android:onClick="@{() -> taskVM.setPriority(1, priorityHigh.getId())}"/>-->
 
-                <RadioButton
-                    android:id="@+id/priority_medium"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="@string/priority_medium"
-                    android:textColor="?attr/baseTextColor"
-                    android:onClick="@{() -> taskVM.setPriority(2, priorityMedium.getId())}"/>
+<!--                <RadioButton-->
+<!--                    android:id="@+id/priority_medium"-->
+<!--                    android:layout_width="wrap_content"-->
+<!--                    android:layout_height="wrap_content"-->
+<!--                    android:text="@string/priority_medium"-->
+<!--                    android:textColor="?attr/baseTextColor"-->
+<!--                    android:onClick="@{() -> taskVM.setPriority(2, priorityMedium.getId())}"/>-->
 
-                <RadioButton
-                    android:id="@+id/priority_low"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="@string/priority_low"
-                    android:textColor="?attr/baseTextColor"
-                    android:onClick="@{() -> taskVM.setPriority(3, priorityLow.getId())}"/>
+<!--                <RadioButton-->
+<!--                    android:id="@+id/priority_low"-->
+<!--                    android:layout_width="wrap_content"-->
+<!--                    android:layout_height="wrap_content"-->
+<!--                    android:text="@string/priority_low"-->
+<!--                    android:textColor="?attr/baseTextColor"-->
+<!--                    android:onClick="@{() -> taskVM.setPriority(3, priorityLow.getId())}"/>-->
 
-            </RadioGroup>
+<!--            </RadioGroup>-->
 
             <!-- Pomodoro count label -->
             <com.google.android.material.textview.MaterialTextView
@@ -117,7 +116,7 @@
                 android:textSize="25sp"
                 android:layout_marginTop="15dp"
                 android:layout_marginStart="30dp"
-                app:layout_constraintTop_toBottomOf="@+id/priority_group"
+                app:layout_constraintTop_toBottomOf="@+id/task_layout"
                 app:layout_constraintStart_toStartOf="parent"/>
             <!-- Pomodoro count -->
             <EditText
@@ -132,7 +131,7 @@
                 android:textAlignment="center"
                 android:hint="@string/pomodoro_number_placeholder"
                 android:autofillHints=""
-                app:layout_constraintTop_toBottomOf="@id/priority_group"
+                app:layout_constraintTop_toBottomOf="@id/task_layout"
                 app:layout_constraintEnd_toEndOf="parent"/>
 
             <LinearLayout
@@ -166,8 +165,7 @@
                         android:textSize="16sp"
                         android:maxLines="5"
                         android:gravity="top|start"
-                        android:textColor="?attr/baseTextColor"
-                        android:textColorHint="?attr/roundedBtnBg"/>
+                        android:textColor="?attr/baseTextColor"/>
 
                 </com.google.android.material.textfield.TextInputLayout>
 
