--- a/app/src/main/res/layout/item_finished_task.xml
+++ b/app/src/main/res/layout/item_finished_task.xml
@@ -23,10 +23,9 @@
 
             <View
                 android:id="@+id/priority_level_dot_id"
-                android:layout_width="10dp"
-                android:layout_height="10dp"
-                android:backgroundTint="@color/progress_bar_color2"
-                android:background="@color/progress_bar_color1"
+                android:layout_width="20dp"
+                android:layout_height="20dp"
+                android:background="@drawable/circle_dot"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintBottom_toBottomOf="parent"/>
