--- a/app/src/main/res/layout/fragment_task_view_category.xml
+++ b/app/src/main/res/layout/fragment_task_view_category.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout xmlns:app="http://schemas.android.com/apk/res-auto">
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <data>
         <variable
@@ -8,7 +9,6 @@
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
-        xmlns:android="http://schemas.android.com/apk/res/android"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_margin="20dp">
@@ -68,11 +68,11 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:backgroundTint="?attr/cancelBtnColor"
-            android:text="apply"
-            android:textSize="16sp"
+            android:text="restore"
             android:textColor="?attr/baseTextColor"
+            android:textSize="16sp"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/category_description_display_id"/>
+            app:layout_constraintTop_toBottomOf="@+id/category_description_display_id" />
 
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/category_tasks_recycler_view_id"
